fix: update header component for improved branding visibility and logo responsiveness

--- a/rg_web/src/styles.scss
+++ b/rg_web/src/styles.scss
@@ -247,6 +247,12 @@ h1.site-title {
   &.loaded {
     opacity: 1;
   }
+
+  .logo-svg {
+    width: 100%;
+    height: 100%;
+    display: block;
+  }
 }
 
 @media screen and (max-width: 360px) {
